fixed navbar overflow

--- a/styles.css
+++ b/styles.css
@@ -405,3 +405,15 @@ padding-bottom: 1.5rem;
     color: #bdc3c7;
     
 }
+@media (max-width: 768px){
+    .nav-links{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    .navbar{
+        flex-direction: column;
+        align-items: center;
+    }
+}
